--- a/gatsby-archive/src/styles/partials/_navbar.scss
+++ b/gatsby-archive/src/styles/partials/_navbar.scss
@@ -2,16 +2,15 @@
 @use "./_variables" as *;
 
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   padding: 0px;
   z-index: 100;
   background-color: var(--color-background);
-  flex-shrink: 0;
 
   .custom-navbar-container {
     max-width: none;
-    height: 80px;
+    height: 100px;
     padding-top: var(--spacing-2);
     padding-bottom: var(--spacing-2);
     z-index: 100;
@@ -23,7 +22,6 @@
       h1 {
         font-size: "200%";
         padding-left: 15px;
-        margin-bottom: 0px;
         font-weight: var(--fontWeight-bold);
         color: var(--color-heading);
       }
@@ -40,7 +38,7 @@
     padding: var(--spacing-2);
 
     .dark-mode-toggle {
-      width: 38px;
+      width: 38px; 
       padding: 4px 8px;
     }
   }
@@ -55,7 +53,7 @@
     border-radius: var(--spacing-2);
     border: none;
     background-color: var(--color-accent-light);
-
+    
     &:active {
       transform: scale(0.95);
       color: var(--color-primary) !important;
