--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -1,7 +1,7 @@
 @use "./_variables" as *;
 
 .blog-post {
-  margin: var(--spacing-0) var(--spacing-4) 95px var(--spacing-4); // Footer height & under construction banner
+  margin: var(--spacing-0) var(--spacing-4); // Footer height & under construction banner
 
   header h1 {
     margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
@@ -29,7 +29,7 @@
 // Post list item
 .post-list-item {
   margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+  margin-top: var(--spacing-4);
 }
 
 .post-list-item p {
@@ -54,7 +54,7 @@
   flex-wrap: wrap;
   padding: var(--spacing-2);
   border-radius: var(--spacing-2);
-  margin: 10px 15% 0;
+  margin: 10px 5% 0;
   width: fit-content;
   padding: 2px;
   background-color: #e0e0e0a8;
