--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -49,16 +49,16 @@ h6 {
     font-size: var(--fontSize-1);
   }
 
-  h1 > a {
+  h1>a {
     color: inherit;
     text-decoration: none;
   }
 
-  h2 > a,
-  h3 > a,
-  h4 > a,
-  h5 > a,
-  h6 > a {
+  h2>a,
+  h3>a,
+  h4>a,
+  h5>a,
+  h6>a {
     text-decoration: none;
     color: inherit;
   }
@@ -89,7 +89,7 @@ ol li {
   margin-bottom: calc(var(--spacing-8) / 2);
 }
 
-li > p {
+li>p {
   margin-bottom: calc(var(--spacing-8) / 2);
 }
 
@@ -97,7 +97,7 @@ li *:last-child {
   margin-bottom: var(--spacing-0);
 }
 
-li > ul {
+li>ul {
   margin-left: var(--spacing-8);
   margin-top: calc(var(--spacing-8) / 2);
 }
@@ -113,12 +113,12 @@ blockquote {
   margin-bottom: var(--spacing-8);
 }
 
-blockquote > :last-child {
+blockquote> :last-child {
   margin-bottom: var(--spacing-0);
 }
 
-blockquote > ul,
-blockquote > ol {
+blockquote>ul,
+blockquote>ol {
   list-style-position: inside;
 }
 
@@ -141,6 +141,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
+  color: var(--color-highlight);
 }
 
 // Media queries
