--- a/src/styles/partials/_sign.scss
+++ b/src/styles/partials/_sign.scss
@@ -40,6 +40,7 @@
     display: flex;
     align-items: start;
     padding: 0px 30px;
+    margin-bottom: var(--spacing-6);
 }
 
 .swinging-sign {
@@ -49,7 +50,6 @@
     text-align: center;
     line-height: 1;    
     padding: 32px 32px 24px 32px;
-    cursor: pointer;
     animation: sway 6s linear forwards;
     transform-origin: 50% -32px;
     background: linear-gradient(to right, var(--color-primary) 0%, var(--color-primary) 100%),
