--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -30,7 +30,7 @@ const options = {
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>{fullItem.title}</h1>
+        <h1 class="text-2xl font-bold">{fullItem.title}</h1>
         {fullItem.isInDevelopment && (
           <span class="badge bg-warning">In Development</span>
         )}
