--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -24,17 +24,15 @@
   box-sizing: border-box;
 }
 
-// HTML & Body
+// HTML & Body - Tailwind handles font sizes
 html {
   line-height: var(--lineHeight-normal);
-  font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 body {
   font-family: var(--font-body);
-  font-size: var(--fontSize-1);
   color: var(--color-text);
   background-color: var(--color-background);
   margin: 0;
