--- a/src/pages/workshop/gaming/index.astro
+++ b/src/pages/workshop/gaming/index.astro
@@ -6,7 +6,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>Gaming</h1>
+        <h1 class="text-2xl font-bold">Gaming</h1>
         <p>Welcome to my gaming section! Here you'll find guides and resources for games I'm currently playing.</p>
       </div>
     </div>
