--- a/src/pages/workshop/recipes/[slug].astro
+++ b/src/pages/workshop/recipes/[slug].astro
@@ -31,7 +31,7 @@ const options = {
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>{fullRecipe.name}</h1>
+        <h1 class="text-2xl font-bold">{fullRecipe.name}</h1>
         {fullRecipe.rating && (
           <p>Rating: {'⭐'.repeat(fullRecipe.rating)}</p>
         )}
