--- a/src/pages/workshop/recipes/index.astro
+++ b/src/pages/workshop/recipes/index.astro
@@ -9,7 +9,7 @@ const recipes = await getAllRecipes();
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>Recipes</h1>
+        <h1 class="text-2xl font-bold">Recipes</h1>
       </div>
     </div>
 
