--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -21,7 +21,7 @@
       text-decoration: none;
 
       h1 {
-        font-size: "200%";
+        @apply text-5xl;
         padding-left: 15px;
         margin-bottom: 0px;
         font-weight: var(--fontWeight-bold);
