--- a/src/styles/partials/_portfolio.scss
+++ b/src/styles/partials/_portfolio.scss
@@ -45,7 +45,7 @@
   }
   
   .portfolio-list-item h2 {
-    font-size: var(--fontSize-4);
+    @apply text-2xl;
     color: var(--color-primary);
     margin-bottom: var(--spacing-2);
     margin-top: var(--spacing-0);
