--- a/src/styles/partials/_recipe.scss
+++ b/src/styles/partials/_recipe.scss
@@ -53,7 +53,7 @@
 }
 
 .recipe-list-item h2 {
-  font-size: var(--fontSize-4);
+  @apply text-2xl;
   color: var(--color-primary);
   margin-bottom: var(--spacing-2);
   margin-top: var(--spacing-0);
