--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,7 +1,7 @@
-// Typography styles
+// Typography styles - Tailwind handles font sizes
 @use "./_variables" as *;
 
-// Headings
+// Headings - Tailwind will handle font sizes via utility classes
 h1,
 h2,
 h3,
@@ -13,55 +13,27 @@ h6 {
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
-
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: var(--fontWeight-bold);
-    color: var(--color-heading);
-  }
+  font-weight: var(--fontWeight-bold);
+  color: var(--color-heading);
 
   h1 {
     font-weight: var(--fontWeight-black);
-    font-size: var(--fontSize-6);
     color: var(--color-heading-black);
   }
+}
 
-  h2 {
-    font-size: var(--fontSize-5);
-  }
+h1>a {
+  color: inherit;
+  text-decoration: none;
+}
 
-  h3 {
-    font-size: var(--fontSize-4);
-  }
-
-  h4 {
-    font-size: var(--fontSize-3);
-  }
-
-  h5 {
-    font-size: var(--fontSize-2);
-  }
-
-  h6 {
-    font-size: var(--fontSize-1);
-  }
-
-  h1>a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  h2>a,
-  h3>a,
-  h4>a,
-  h5>a,
-  h6>a {
-    text-decoration: none;
-    color: inherit;
-  }
+h2>a,
+h3>a,
+h4>a,
+h5>a,
+h6>a {
+  text-decoration: none;
+  color: inherit;
 }
 
 // Prose
@@ -108,7 +80,6 @@ blockquote {
   margin-right: var(--spacing-8);
   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
   font-style: italic;
   margin-bottom: var(--spacing-8);
 }
