IMP Add About me Page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 // Import component styles
 @use "./partials/_base" as *;
+@use "./partials/_about" as *;
 @use "./partials/_typography" as *;
 @use "./partials/_blog" as *;
 @use "./partials/_navbar" as *;
