--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,7 @@
 @use "./partials/_sign" as *;
 @use "./partials/_quickNav" as *;
 @use "./partials/_gaming" as *;
+@use "./partials/_accessibility" as *;
 
 // Accessibility wrapper
 .accessibility-wrapper li {
