--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,10 +44,11 @@ const isRootPath = pathname === '/';
     </script>
   </head>
   <body class="h-full m-0 p-0">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <div class="flex flex-col h-screen overflow-hidden">
       <Navbar client:load />
       
-      <main class="flex-1 overflow-y-auto overflow-x-hidden bg-background">
+      <main id="main-content" class="flex-1 overflow-y-auto overflow-x-hidden bg-background">
         <div class="container mx-auto p-4 w-full" data-is-root-path={isRootPath}>
           <slot />
         </div>
