--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import SignComponent from "../components/sign";
     containerStyle={{ justifyContent: "center", alignItems: "center" }}
     signStyle={{ fontSize: "2rem" }}
   />
-  <div style={{ textAlign: "center" }}>
+  <div class="text-center">
     <p> ✨ Hello and welcome to my site! ✨ </p>
     <p>I'm still working on the content for my homepage, but in the meantime, you can check out my blog and workshop!</p>
   </div>
