--- a/src/styles/partials/_sign.scss
+++ b/src/styles/partials/_sign.scss
@@ -19,20 +19,21 @@
         transform: rotate(2deg);
         animation-timing-function: ease-in-out;
     }
-    70% {
-        transform: rotate(-.1deg);
-        animation-timing-function: ease-in-out;
-    }
     75% {
-        transform: rotate(.05deg);
+        transform: rotate(-1deg);
         animation-timing-function: ease-in-out;
     }
-    80% {
-        transform: rotate(0);
+    85% {
+        transform: rotate(0.5deg);
+        animation-timing-function: ease-in-out;
+    }
+    92% {
+        transform: rotate(0deg);
         animation-timing-function: ease-in-out;
     }
     100% {
-        transform: rotate(0);
+        transform: rotate(0deg);
+        animation-timing-function: ease-in-out;
     }
 }
 
@@ -123,7 +124,7 @@
     
     background-repeat: no-repeat;
     
-    > p {
+    > h1 {
         margin: 0;
         color: white;
     }
